--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>GLB — Object Autorotate (Click to Pause/Resume) + Axes</title>
+  <title>GLB — Autorotate + Mouse Drag & Zoom</title>
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
   <style>
     html,body{margin:0;height:100%}
@@ -16,16 +16,16 @@
 </head>
 <body>
   <div class="hint">
-    開始5秒静止 → 6秒移動 → 3秒静止 → モデルが中心で自動回転<br>
-    クリックで「回転 停止 / 再開」切替（ドラッグ・ズーム不可）
+    最初から自動回転。<br>
+    マウスドラッグでモデルをグリグリ、ホイールでズーム。<br>
+    操作をやめると数秒後にふわっと自動回転が再開。
   </div>
 
-  <a-scene renderer="colorManagement:true" background="color:#c2c2c2"  
+  <a-scene renderer="colorManagement:true" background="color:#c2c2c2"
     device-orientation-permission-ui="enabled: false"
-  xr-mode-ui="enabled: false"
-  vr-mode-ui="enabled: false">
+    xr-mode-ui="enabled: false"
+    vr-mode-ui="enabled: false">
 
-  
     <!-- ライト -->
     <a-entity light="type:ambient;intensity:0.3"></a-entity>
     <a-entity light="type:directional;intensity:0.4" position="2 4 2"></a-entity>
@@ -33,17 +33,19 @@
     <!-- モデル：原点中心で回転。XYZ軸は子にして一緒に回す -->
     <a-entity id="modelRoot"
       position="0 0 0"
-      auto-spin="speedDegPerSec:4; rampMs:1200; enabled:false">
+      auto-spin="speedDegPerSec:4; rampMs:1200; idleSec:3; enabled:true">
       <a-entity axes-helper="size:0.1"></a-entity>
-      <a-entity gltf-model="url(./kiyohira.glb)" position="0 0 0" rotation="0 0 0" scale="0.2 0.2 0.2"></a-entity>
+      <!-- ここは自分の glb に合わせてパス/スケール調整 -->
+      <a-entity gltf-model="url(./kiyohira.glb)"
+                position="0 0 0"
+                rotation="0 0 0"
+                scale="0.2 0.2 0.2"></a-entity>
     </a-entity>
 
-    <!-- カメラ（固定。look-controls等は付けない） -->
+    <!-- カメラ（位置固定、ズームはスクリプトでZだけ動かす） -->
     <a-entity id="rig"
-      position="0.8 5 8"
-      rotation="-55 0 0"
-      animation__move="property: position; to: 1 15 20; dur: 6000; delay: 5000; easing: easeInOutQuad"
-      animation__look="property: rotation; to: -40 0 0; dur: 6000; delay: 5000; easing: easeInOutQuad">
+      position="0 4 10"
+      rotation="-25 0 0">
       <a-entity id="cam" camera="fov:40"></a-entity>
     </a-entity>
   </a-scene>
@@ -58,65 +60,134 @@
       }
     });
 
-    // ===== モデルの自動回転（クリックで一時停止/再開・再開時はなめらかに） =====
+    // ===== モデル自動回転：ユーザー操作で一時停止、数秒後に再開 =====
     AFRAME.registerComponent('auto-spin', {
-      schema: { speedDegPerSec:{default:4}, rampMs:{default:1200}, enabled:{default:false} },
-      init(){
-        this.running = this.data.enabled;   // 現在回っているか
-        this._rampT  = 0;                   // 速度立ち上げ用(0→1)
-        // シーンのキャンバス押下でトグル
-        const canvas = this.el.sceneEl.canvas;
-        const onReady = () => {
-          canvas.addEventListener('click', () => {
-            if (this.running) {             // 回っていたら停止
-              this.running = false;
-            } else {                        // 停止中なら再開（ゆっくり立ち上げ）
-              this.running = true;
-              this._rampT = 0;
-            }
-          });
-        };
-        if (canvas) onReady(); else this.el.sceneEl.addEventListener('render-target-loaded', onReady);
+      schema: {
+        speedDegPerSec: {default: 4},   // 自動回転の速度（度/秒）
+        rampMs:         {default: 1200},// 立ち上がり時間（ms）
+        idleSec:        {default: 3},   // 最後の操作から何秒で再開か
+        enabled:        {default: true}
       },
-      tick(t,dt){
-        if (!this.running) return;
-        const rot = this.el.getAttribute('rotation');
-        const dsec = dt/1000;
-        // 速度のなめらか立ち上げ
-        let k=1;
-        if (this._rampT < 1){
-          this._rampT = Math.min(1, this._rampT + dsec/(this.data.rampMs/1000));
-          const x=this._rampT; k = x<0.5 ? 4*x*x*x : 1 - Math.pow(-2*x+2,3)/2; // easeInOutCubic
+      init() {
+        this.running = this.data.enabled;
+        this._rampT = this.running ? 1 : 0;
+        this._lastUserMs = -Infinity; // ユーザー操作時刻（performance.now）
+      },
+      // ユーザーがドラッグ/ズームしたときに呼んでもらう
+      userKick() {
+        this._lastUserMs = performance.now();
+        this.running = false;  // 一旦止める
+      },
+      tick(t, dt) {
+        const now = performance.now();
+
+        // 止まっている間は、一定時間経過したら再び回転をON
+        if (!this.running) {
+          if (now - this._lastUserMs >= this.data.idleSec * 1000) {
+            this.running = true;
+            this._rampT = 0; // 再開時はゆっくり立ち上げ
+          } else {
+            return;
+          }
         }
+
+        // ここから回転処理
+        const rot = this.el.getAttribute('rotation');
+        const dsec = dt / 1000;
+
+        // 速度のなめらか立ち上げ
+        let k = 1;
+        if (this._rampT < 1) {
+          this._rampT = Math.min(1, this._rampT + dsec / (this.data.rampMs / 1000));
+          const x = this._rampT;
+          // easeInOutCubic
+          k = x < 0.5 ? 4 * x * x * x : 1 - Math.pow(-2 * x + 2, 3) / 2;
+        }
+
         rot.y += this.data.speedDegPerSec * k * dsec; // Yawのみ
         this.el.setAttribute('rotation', rot);
-      },
-      setEnabled(on){
-        this.running = on;
-        if (on) this._rampT = 0;
       }
     });
 
-    // ===== シーケンス（ロード後に安全に実行） =====
-    document.querySelector('a-scene').addEventListener('loaded', ()=>{
-      const rig = document.querySelector('#rig');
+    // ===== シーン読み込み後にドラッグ・ズーム処理を設定 =====
+    document.querySelector('a-scene').addEventListener('loaded', () => {
+      const scene     = document.querySelector('a-scene');
+      const canvas    = scene.canvas;
       const modelRoot = document.querySelector('#modelRoot');
-      const auto = modelRoot.components['auto-spin'];
+      const rig       = document.querySelector('#rig');
+      const auto      = modelRoot.components['auto-spin'];
 
-      // 初期モーション完了 → 3秒待って自動回転ON
-      rig.addEventListener('animationcomplete__move', ()=>{
-        setTimeout(()=>{ auto.setEnabled(true); }, 3000);
+      // キャンバスがまだ取れない場合用
+      if (!canvas) return;
+
+      // マウスドラッグでモデルを回す
+      let isDragging = false;
+      let lastX = 0;
+      let lastY = 0;
+
+      const dragSpeed = 0.3; // 1pxあたりの回転量（度）
+
+      canvas.style.cursor = 'grab';
+      canvas.style.touchAction = 'none'; // スマホでのブラウザスクロールを防止
+
+      canvas.addEventListener('pointerdown', (e) => {
+        isDragging = true;
+        lastX = e.clientX;
+        lastY = e.clientY;
+        canvas.setPointerCapture(e.pointerId);
+        canvas.style.cursor = 'grabbing';
+        auto.userKick(); // 操作開始 → 自動回転一時停止
       });
 
-      // すべてのユーザー操作（ドラッグ/ズーム/キー）は無効化
-      const prevent = e => { e.preventDefault(); e.stopPropagation(); };
-      const canvas = document.querySelector('canvas');
-      ['pointerdown','pointermove','pointerup','wheel','keydown','keyup','gesturestart','gesturechange','gestureend','touchstart','touchmove','touchend']
-        .forEach(type => window.addEventListener(type, prevent, {passive:false}));
-      // テキスト選択カーソルなども出さない
-      if (canvas) canvas.style.touchAction = 'none';
+      canvas.addEventListener('pointermove', (e) => {
+        if (!isDragging) return;
+
+        const dx = e.clientX - lastX;
+        const dy = e.clientY - lastY;
+        lastX = e.clientX;
+        lastY = e.clientY;
+
+        const rot = modelRoot.getAttribute('rotation');
+        rot.y += dx * dragSpeed;
+        rot.x += dy * dragSpeed;
+
+        // 上下の振りすぎ防止
+        rot.x = Math.max(-80, Math.min(80, rot.x));
+
+        modelRoot.setAttribute('rotation', rot);
+
+        auto.userKick(); // 動かしている間はタイマーをリセット
+      });
+
+      const endDrag = (e) => {
+        if (!isDragging) return;
+        isDragging = false;
+        if (e && e.pointerId != null && canvas.hasPointerCapture(e.pointerId)) {
+          canvas.releasePointerCapture(e.pointerId);
+        }
+        canvas.style.cursor = 'grab';
+        // ここでは userKick() しない（最後の pointermove でされている）
+      };
+
+      canvas.addEventListener('pointerup', endDrag);
+      canvas.addEventListener('pointerleave', endDrag);
+
+      // ホイールでズーム（rig の z を前後させる）
+      const minZ = 4;   // これより近づかない
+      const maxZ = 20;  // これより遠ざからない
+      const zoomSpeed = 0.01; // deltaY との掛け算係数
+
+      canvas.addEventListener('wheel', (e) => {
+        e.preventDefault();
+
+        const pos = rig.getAttribute('position');
+        pos.z += e.deltaY * zoomSpeed;
+        pos.z = Math.max(minZ, Math.min(maxZ, pos.z));
+        rig.setAttribute('position', pos);
+
+        auto.userKick(); // ズーム操作でも自動回転一時停止
+      }, { passive: false });
     });
   </script>
 </body>
 </html>
-
